Added Open and Closed Starlit Blossoms and loot tables for blocks